# HelloGraphicsApi

./: .gitignore  CMakeLists.txt  README.md  build.bat  generate_projects.bat  generate_projects_vs2017.bat  generate_projects_vs2022.bat
D3D12_Project/: CMakeLists.txt  D3D12AppBase.cpp  D3D12AppBase.h  D3D12AppOffscreen.cpp  D3D12AppOffscreen.h  D3D12AppTexture.cpp  D3D12AppTexture.h  D3D12AppTriangle.cpp  D3D12AppTriangle.h  Main.cpp  packages.config
D3D12_Project/libs/: d3dx12.h
D3D12_Project/shaders/: texturePs.hlsl  textureVs.hlsl  triangleVs.hlsl
Vulkan_Project/: CMakeLists.txt  Main.cpp  VkAppBase.cpp  VkAppBase.h  VkAppOffscreen.cpp  VkAppOffscreen.h  VkAppTexture.cpp  VkAppTexture.h  VkAppTriangle.cpp  VkAppTriangle.h
Vulkan_Project/shaders/: BuildShader.bat  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv
